@@ -1,3 +1,4 @@
+    - Removed potential NullPointerException in SearchExpressionTreeParser.
 2.7 beta
     - Some improvements to MS Office export filter.
     - Introduced three choices for ensuring unique generated keys. The default one (marking
